Create new Accordion.css file.  Rename all panels to match discription of what they are reresenting. Center everything on projects page.

--- a/client/src/components/pages/Projects/styles/Projects.css
+++ b/client/src/components/pages/Projects/styles/Projects.css
@@ -4,6 +4,9 @@ iframe {
 }
 
 .project-split {
-    display: grid;
-    grid-template-columns: 30% 70%;
+    margin-top: 24px;
+    display: grid!important;
+    grid-template-columns: 50% 50%;
+    justify-items: center!important;
+    align-items: center!important;
 }
